Majorily working around configs to enhance their overall work