@@ -1,19 +1,18 @@
 package ru.vladimir.noctyss.config;
 
 import lombok.Getter;
+import lombok.NonNull;
 import lombok.RequiredArgsConstructor;
 import org.bukkit.Bukkit;
 import org.bukkit.World;
 import org.bukkit.configuration.ConfigurationSection;
 import org.bukkit.configuration.file.FileConfiguration;
 import org.bukkit.plugin.java.JavaPlugin;
+import org.jetbrains.annotations.Nullable;
 import ru.vladimir.noctyss.event.EventType;
 import ru.vladimir.noctyss.utility.LoggerUtility;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 @Getter
 @RequiredArgsConstructor
@@ -26,7 +25,6 @@ public final class GeneralConfig implements IConfig {
 
     @Override
     public void load() {
-        plugin.saveDefaultConfig();
         parse();
         validate();
     }
@@ -36,55 +34,60 @@ public final class GeneralConfig implements IConfig {
         allowedEventWorlds = getWorldMap(fileConfig.getConfigurationSection(SETTINGS + "allowed-worlds"));
     }
 
-    private Map<World, List<EventType>> getWorldMap(ConfigurationSection section) {
+    @NonNull
+    private Map<World, List<EventType>> getWorldMap(@Nullable ConfigurationSection section) {
         if (section == null) {
-            LoggerUtility.warn(this,
-                    "List of worlds for allowed events is empty and therefore events won't be used");
-            return Map.of();
+            LoggerUtility.warn(this, "List of worlds for allowed events is empty. No events will be handled.");
+            return Collections.emptyMap();
         }
 
-        final Map<World, List<EventType>> worldMap = new HashMap<>();
+        Map<World, List<EventType>> worldMap = new HashMap<>();
 
-        for (final String worldName : section.getKeys(false)) {
-
-            final World world = Bukkit.getWorld(worldName);
+        for (String worldName : section.getKeys(false)) {
+            World world = Bukkit.getWorld(worldName);
             if (world == null) {
                 LoggerUtility.warn(this, "World not found: %s".formatted(worldName));
                 continue;
             }
 
-            final List<EventType> eventTypes = getEventTypes(section.getStringList(worldName));
-
+            List<EventType> eventTypes = getEventTypes(section.getStringList(worldName));
             worldMap.put(world, eventTypes);
         }
 
         return worldMap;
     }
 
-    private List<EventType> getEventTypes(List<String> eventTypeNames) {
-        final List<EventType> eventTypes = new ArrayList<>();
-        for (final String eventTypeName : eventTypeNames) {
+    @NonNull
+    private List<EventType> getEventTypes(@NonNull List<String> eventTypeNames) {
+        List<EventType> eventTypes = new ArrayList<>();
+
+        for (String eventTypeName : eventTypeNames) {
+            if (eventTypeName == null || eventTypeName.isBlank()) {
+                LoggerUtility.warn(this, "Invalid event type name: (empty or null)");
+                continue;
+            }
+
             try {
-                final EventType eventType = EventType.valueOf(eventTypeName.toUpperCase().trim());
+                EventType eventType = EventType.valueOf(eventTypeName.toUpperCase().trim());
                 eventTypes.add(eventType);
-            } catch (IllegalArgumentException | NullPointerException e) {
+            } catch (IllegalArgumentException e) {
                 LoggerUtility.warn(this, "Invalid event type name: %s. %s"
-                        .formatted(eventTypeName, e));
+                        .formatted(eventTypeName, e.getMessage()));
             }
         }
+
         return eventTypes;
     }
 
     private void validate() {
         if (debugLevel < 0 || debugLevel > 2) {
-            LoggerUtility.warn(this, "Invalid debug level '%d'. Setting to default"
-                    .formatted(debugLevel));
+            LoggerUtility.warn(this, "Invalid debug level '%d'. Setting to default".formatted(debugLevel));
             debugLevel = 0;
         }
 
         if (allowedEventWorlds.isEmpty()) {
-            LoggerUtility.warn(this,
-                    "List of allowed event worlds is null and therefore no events will be handled");
+            plugin.reloadConfig();
+            LoggerUtility.warn(this, "List of allowed event worlds is empty. No events will be handled.");
         }
     }
 
